# mugshot

./: .gitignore  README.md  pyproject.toml
src/mugshot/: __main__.py  app.py
src/mugshot/components/: feed.py
src/mugshot/cv/: __init__.py  _alt_cv_detection.py  _base_cv_detection.py  _cv_detection.py  _cv_worker.py
src/mugshot/feed/: __init__.py  _feed_worker.py
src/mugshot/mouse_input/: __init__.py  _frame_input.py  _mouse_action.py  _screen.py
tests/: test_app.py  test_cv.py
