[project]
name = "mugshot"
description = "..." # TODO: Write description
version = "0.1.0"
requires-python = "== 3.12.*"
readme = "README.md"
dependencies = [
    "PySide6 >= 6.8",
    "opencv-contrib-python >= 4.10",
    "opencv-python-headless >= 4.10",
    "ultralytics >= 8.3",
    "dlib >= 19.24",
    "imutils >= 0.5",
]
optional-dependencies = { dev = [
    "build >= 1.2",
    "pytest >= 8.3",
    "black >= 24",
] }

[build-system]
requires = ["setuptools >= 75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
